// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map should render correct for multiple elements 1`] = `
<map
  tip_info={
    Array [
      Object {
        "business_city": "New York",
        "business_name": "Poolinos",
        "business_state": "NY",
        "business_street_address": "292 Bowery",
        "business_zip": "10012",
        "neighborhood": "Soho",
        "shift_date": "04/30/2019",
        "shift_length": 5,
        "shift_position": "Busser",
        "shift_time": "PM",
        "takehome": 87,
      },
      Object {
        "business_city": "New York",
        "business_name": "Poolinos",
        "business_state": "NY",
        "business_street_address": "292 Bowery",
        "business_zip": "10012",
        "neighborhood": "Soho",
        "shift_date": "05/02/2019",
        "shift_length": 6,
        "shift_position": "Busser",
        "shift_time": "PM",
        "takehome": 93,
      },
    ]
  }
/>
`;

exports[`Map should render correct for single element 1`] = `
<map
  tip_info={
    Array [
      Object {
        "business_city": "New York",
        "business_name": "Poolinos",
        "business_state": "NY",
        "business_street_address": "292 Bowery",
        "business_zip": "10012",
        "neighborhood": "Soho",
        "shift_date": "04/30/2019",
        "shift_length": 5,
        "shift_position": "Busser",
        "shift_time": "PM",
        "takehome": 87,
      },
    ]
  }
/>
`;
